added personal info

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <title>Abdul-Rahman Ibrahim | Portfolio</title>
 
   <!-- Google Search Tags -->
-  <meta itemprop="name" content="Rodrigo Arenas | Portfolio">
+  <meta itemprop="name" content="Abdul-Rahman Ibrahim | Portfolio">
   <meta itemprop="description"
     content="Web site for personal data science projects, created with React, made open source">
 
