added projects and skills

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description"
-    content="Web site for personal data science projects, created with React, made open source" />
+  <meta name="description" content="Web site for my portfolio, created with React, made open source" />
   <meta name="keywords" content="data science portfolio, portfolio, react, react portfolio" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
@@ -20,8 +19,7 @@
 
   <!-- Google Search Tags -->
   <meta itemprop="name" content="Abdul-Rahman Ibrahim | Portfolio">
-  <meta itemprop="description"
-    content="Web site for personal data science projects, created with React, made open source">
+  <meta itemprop="description" content="Web site for my portfolio, created with React, made open source">
 
 </head>
 
