--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,26 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <!-- Start Single Page Apps for GitHub Pages -->
+  <script type="text/javascript">
+    (function (l) {
+      if (l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function (s) {
+          return s.replace(/and/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
+  <!-- End Single Page Apps for GitHub Pages -->
+
   <title>Abdul-Rahman Ibrahim | Portfolio</title>
 
   <!-- Google Search Tags -->
   <meta itemprop="name" content="Abdul-Rahman Ibrahim | Portfolio">
-  <meta itemprop="description" content="Web site for my portfolio, created with React, made open source">
+  <meta itemprop="description" content="Website for my portfolio, created with React, made open source">
 
 </head>
 
